[package]
name = "rust-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.26"
find_folder = "0.3.0"
image = "0.25.1"
imageproc = "0.25.0"
piston = "1.0.0"
piston_window = "0.132.0"
rusttype = "0.9.3"
